# package

allwinner/adb/: Makefile  adbd
allwinner/bluetooth/: Makefile  btenable.sh
allwinner/boot-play/: Makefile  play.init
allwinner/cameratest/: Makefile
allwinner/dlna-service/: Makefile
allwinner/dlna_demo/: Makefile
allwinner/healthd/: Makefile  healthd.init  healthd.log.sh
allwinner/liballwinner/: Makefile  Makefile.inc
allwinner/liballwinner-base/: Makefile  tina_log.h
allwinner/liballwinner_tina/: Makefile
allwinner/libcedarc/: Makefile.am  Makefile.inc  config.mk  configure  configure.ac  libcdclist.mk  readMe.txt
allwinner/libcedarc/openmax/omxcore/: Android.mk  Makefile.am  Makefile.in
allwinner/libcedarc/openmax/omxcore/inc/: AWOMX_VideoIndexExtension.h  OMX_Core.h  OMX_IVCommon.h  OMX_Video.h  aw_omx_common.h  aw_omx_component.h
allwinner/libcedarc/openmax/omxcore/src/: aw_omx_core.c  aw_omx_core.h  aw_registry_table.c  omx_core_cmp.cpp  omx_core_cmp.h
allwinner/libcedarc/openmax/vdec/: Android.mk  Makefile.am  Makefile.in  omx_vdec.cpp  omx_vdec.h  omx_vdec_newDisplay.cpp  omx_vdec_newDisplay.h  transform_color_format.c  transform_color_format.h
allwinner/libcedarc/openmax/venc/: Android.mk  Makefile.am  Makefile.in  neon_rgb2yuv.s  omx_tsem.c  omx_tsem.h  omx_venc.cpp  omx_venc.h
allwinner/libcedarc/vdecoder/: Android.mk  Makefile.am  Makefile.in  fbm.c  pixel_format.c  sbm.c  vdecoder.c  veregister.h  videoengine.h
allwinner/libcedarc/vdecoder/include/: DecoderList.h  DecoderTypes.h  adapter.h  fbm.h  sbm.h
allwinner/libcedarx/: Makefile.inc  config.mk  configure.ac  libcdxlist.mk  version.h
allwinner/libminui/: Makefile
allwinner/libspeex/: Makefile
allwinner/misc-upgrade/: Makefile  aw_upgrade_autorun.init  aw_upgrade_image.sh  aw_upgrade_log.sh  aw_upgrade_normal.sh  aw_upgrade_process.sh
allwinner/mtop/: Makefile
allwinner/my-parrot/: Makefile  my-parrot-log.sh  my-parrot.init
allwinner/nativepower/: Makefile
allwinner/powermanager/: Makefile
allwinner/sayeye/: Makefile  sayeye.init
allwinner/smartlinkd/: Makefile
allwinner/softap/: Makefile
allwinner/speech/: Makefile
allwinner/tina_multimedia/: Makefile
allwinner/tinacameratest/: Makefile
allwinner/tinaplayerdemo/: G102_tinaplayerdemo.sh  MR100_tinaplayerdemo.sh  Makefile  c600_tinaplayerdemo.sh  r18_tinaplayerdemo.sh  r40_tinaplayerdemo.sh  r58_tinaplayerdemo.sh
allwinner/tinarecorderdemo/: Makefile
allwinner/tinymp3/: Makefile
allwinner/tplayerdemo/: G102_tplayerdemo.sh  MR100_tplayerdemo.sh  Makefile  c600_tplayerdemo.sh  r16_tplayerdemo.sh  r40_tplayerdemo.sh  r58_tplayerdemo.sh
allwinner/trecorderdemo/: Makefile
allwinner/wifimanager/: Makefile  udhcpc_wlan0.init  wifi.init
base-files/: Makefile
devel/binutils/: Makefile
devel/perf/: Makefile  musl-compat.h
devel/valgrind/: Makefile
dragonst/awtest/: Makefile
dragonst/awtestcontrol/: Makefile
dragonst/libawtest/: Makefile
dragontools/dragonboard/: Makefile  dragonboard.init
dragontools/dragonstress/: Makefile
dragontools/libdragon/: Makefile
dragontools/testcases/: Makefile
dragontools/tinatest/: Config.in  Depends.mk  Makefile  Modules.mk
firmware/linux-firmware/: Makefile  broadcom_ap6212.mk  broadcom_ap6212a.mk  broadcom_ap6255.mk  broadcom_ap6335.mk  broadcom_ap6356s.mk  realtek.mk  xradio.mk
kernel/linux/: Makefile
kernel/mali400-km/: Makefile
kernel/sgx544-km/: Makefile
lang/python/: Makefile
lang/python-crypto/: Makefile
lang/python-idna/: Makefile
lang/python-setuptools/: Makefile
lang/python-six/: Makefile
lang/python3/: Makefile
libs/alsa-lib/: Makefile
qt/qt5/: Makefile
(+964 files in other folders)
